# docclassifierrs

./: .env.example  Cargo.toml  README.md
src/: facedetect.rs  main.rs
