[package]
name = "docclassifierrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
image = "0.24.1"
imageproc = { git = "https://github.com/image-rs/imageproc.git" }
opencv = "0.63.1"
tesseract = "0.11.0"
#imageproc = "0.22.0"
